--- a/springboot_pipeline_cloudapps.yml
+++ b/springboot_pipeline_cloudapps.yml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: BuildConfig
 metadata:
   name: cloudapps-pipeline
-  namespace: cicd
-  selfLink: /oapi/v1/namespaces/cicd/buildconfigs/cloudapps-pipeline
+  namespace: gitspringboot
+  selfLink: /oapi/v1/namespaces/gitspringboot/buildconfigs/cloudapps-pipeline
   creationTimestamp: null 
   labels:
     app: cloudapps-pipeline
