--- a/springboot_pipeline_cloudapps.json
+++ b/springboot_pipeline_cloudapps.json
@@ -3,8 +3,8 @@
 	"kind": "BuildConfig",
 	"metadata": {
 		"name": "cloudapps-pipeline",
-		"namespace": "cicd",
-		"selfLink": "/oapi/v1/namespaces/cicd/buildconfigs/cloudapps-pipeline",
+		"namespace": "gitspringboot",
+		"selfLink": "/oapi/v1/namespaces/gitspringboot/buildconfigs/cloudapps-pipeline",
 		"creationTimestamp": null,
 		"labels": {
 			"app": "cloudapps-pipeline"
